# exa-cli-simple

./: .gitignore  ABOUT-EXA-MCP.md  BUILD.md  LICENSE  README.md  pyproject.toml
skills/exa-cli-simple-skills/: SKILL.md  SKILL.md.backup-cn.md  SKILL.md.backup.md  SKILL.md.backup2.md
src/exa_cli_simple/: cli.py
